Fix colors for dark mode

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -4,10 +4,19 @@
 @use "settings/variables";
 // @use "mixins/*.scss";
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     min-height: 100vh;
     width: 100vw;
     overflow: hidden scroll;
     font-family: "BAHNSCHRIFT";
     background-color: $c-background;
+}
+@media (prefers-color-scheme: dark){
+    body {
+        background: $c-dark;
+    }
 }
